// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should render 1`] = `
<div>
  <select
    class="form-control select-root"
  />
</div>
`;

exports[`Select should render with blank option 1`] = `
<div>
  <select
    class="form-control select-root"
  >
    <option />
  </select>
</div>
`;
